--- a/newpage.html
+++ b/newpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>New Page</title>
+	<title>Little Feature Page</title>
 </head>
 <body>
 	<h1>Hello welcome to the new page</h1>
