--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>My first website</title>
+	<title>My first website!</title>
 </head>
 <body>
 	<h1>Heading</h1>
